# cmake-initializer

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/actions/publish/: action.yaml
.github/actions/test/common/: action.yaml
.github/actions/test/emscripten/: action.yml
.github/actions/test/macos/: action.yml
.github/actions/test/unix/: action.yml
.github/actions/test/windows/: action.yml
.github/workflows/: build.yml  main.yml  release.yml
docker/: .dockerignore  Dockerfile.emscripten  Dockerfile.linux-clang  Dockerfile.linux-gcc  Dockerfile.macos-clang  Dockerfile.macos-gcc  Dockerfile.windows-clang  Dockerfile.windows-msvc  docker-compose.dev.yml  docker-entrypoint.ps1
docs/: CDASH_INTEGRATION.md  CICD_PIPELINE.md  CMAKE_VARIABLES.md  EMSCRIPTEN_AUTO_INSTALL.md  PRESET_FEATURES.md  SIMPLIFIED_USAGE.md  TESTING_SUMMARY.md
project/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  CTestScript.cmake  PresetConfig.cmake  ProjectMetadata.cmake  Projects.cmake
project/base/: CMakeLists.txt
project/base/project_common/: CMakeLists.txt
project/base/project_config/: CMakeLists.txt  CreateConfigFile.cmake
project/base/project_config/_config/: config.hpp.in
project/base/project_options/: CMakeLists.txt  ProjectOptions.cmake
project/cmake/: Policies.cmake
project/cmake/boilerplate/: RegisterEmscripten.cmake  RegisterExecutable.cmake  RegisterLibrary.cmake  RegisterTest.cmake
project/cmake/downloader/: CPMDownloader.cmake  EmsdkDownloader.cmake
project/cmake/modules/: CPMDownloader.cmake  CPMPackageManager.cmake  CheckSanitizerSupport.cmake  CompilerCache.cmake  CompilerWarnings.cmake  Documentation.cmake  EmscriptenSupport.cmake  EmsdkManager.cmake  EnableInterproceduralOptimization.cmake  GetCurrentArchitecture.cmake  GetCurrentCompiler.cmake  InstallComponent.cmake  LinkDependencies.cmake  LoadEnvVariable.cmake  PresetConfiguration.cmake  PreventInSourceBuilds.cmake  ProjectBoilerplate.cmake  RegisterAssets.cmake  RegisterEmscripten.cmake  RegisterExecutable.cmake  RegisterLibrary.cmake  RegisterProject.cmake  RegisterTest.cmake  SetupCommonProjectOptions.cmake  StaticAnalysis.cmake  StaticLinking.cmake  StringListInterpolation.cmake  SystemLink.cmake  TargetAddCompilerWarnings.cmake  TargetDebugOptions.cmake  TargetExceptions.cmake  TargetHardening.cmake  TargetSanitizers.cmake  TargetSetupCommonOptions.cmake  XRepoDownloader.cmake
project/cmake/project/: CMakeVariables.cmake  CPM.cmake  CompilerCache.cmake  Emsdk.cmake  Initialization.cmake  Options.cmake  Policies.cmake  PresetConfiguration.cmake  ProjectBoilerplate.cmake  ProjectOptions.cmake  Testing.cmake  Variables.cmake
project/cmake/project/impl/: CPM.cmake  CompilerCache.cmake  Emscripten.cmake  InstallComponent.cmake  PackageManager.cmake  PresetConfig.cmake  ProjectBoilerplate.cmake  Testing.cmake  Toolchains.cmake  XMake.cmake
project/cmake/project/impl/CPM/: CPMPackageManager.cmake
project/cmake/project/impl/XMake/: XMake.cmake
project/cmake/project/impl/boilerplate/: RegisterAssets.cmake  RegisterEmscripten.cmake  RegisterExecutable.cmake  RegisterLibrary.cmake  RegisterProject.cmake  RegisterTest.cmake
project/cmake/toolchains/: emscripten.cmake
project/cmake/toolchains/emscripten/: EmscriptenTemplate.cmake  EmsdkManager.cmake
project/samples/: CMakeLists.txt
project/samples/hello_emscripten/: CMakeLists.txt  custom_template.html
project/samples/hello_emscripten/src/: main.cpp
project/samples/hello_fuzzer/: CMakeLists.txt
project/samples/hello_fuzzer/src/: fuzzer.cpp
project/samples/hello_packages/: CMakeLists.txt  Dependencies.cmake
project/samples/hello_packages/src/: main.cpp
project/samples/hello_shared_library/: CMakeLists.txt
project/samples/hello_shared_library/program/: CMakeLists.txt
project/samples/hello_shared_library/program/src/: main.cpp
project/samples/hello_static_library/program/: CMakeLists.txt
project/samples/hello_static_library/program/src/: main.cpp
project/samples/hello_testing_frameworks/: CMakeLists.txt
project/samples/hello_testing_frameworks/include/: math_utils.hpp
project/samples/hello_testing_frameworks/src/: main.cpp  math_utils.cpp
project/samples/hello_testing_frameworks/tests/: CMakeLists.txt  test_boost.cpp  test_catch2.cpp  test_doctest.cpp  test_gtest.cpp
project/samples/hello_world/: .env  CMakeLists.txt
project/samples/hello_world/src/: main.cpp
scripts/: README.md  build.ps1  clean.ps1  format.ps1  install.ps1  test.ps1
scripts/ci/: README.md  submit-cdash.ps1
